...
  var isYesSelected by remember { mutableStateOf(selectedCoffeeShop != null) }
  val getImageLauncher =
      rememberLauncherForActivityResult(
          contract = ActivityResultContracts.GetContent(), onResult = { uri -> imageUri = uri })

  Scaffold(
      modifier = Modifier.testTag("editJourneyScreen"),
      topBar = {
        TopAppBar(
            navigationIcon = {
              IconButton(
                  onClick = { navigationActions.goBack() },
                  modifier = Modifier.testTag("backButton")) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                        contentDescription = "Back",
                        tint = Color.Black)
                  }
            },
...
                  ) {
                    // Box on the left for "Edit Photo"
                    JourneyImageBox(
                        imageUri = imageUri,
                        imageUrl = imageUrl,
                        onImageClick = { getImageLauncher.launch("image/*") },
                        testTag = "editImageBox")

                    // Description section on the right

                    JourneyDescriptionField(
                        description = description, onDescriptionChange = { description = it })
                  }
...
                              date = selectedDate)
                      listJourneysViewModel.updateJourney(updatedJourney)
                      listJourneysViewModel.selectJourney(updatedJourney)
                      navigationActions.goBack()
                    }
                  },
                  modifier = Modifier.fillMaxWidth().testTag("journeySave")) {
                    Text("Save")
                  }
            }
      })
}

